--- a/pyerp/fnd/media/style/style.css
+++ b/pyerp/fnd/media/style/style.css
@@ -1,23 +1,13 @@
 body { 
-  background: #fff; 
+  background-color: white 
   color: #000; 
   margin: 10px; 
   padding: 0; 
   font-size:12px;
+  font-family: arial, geneva, helvetica, sans-serif; 
 }
 
 /* Link styles */
-:link, :visited {
- text-decoration: none;
- color: #b00;
- border-bottom: 1px dotted #bbb;
-}
-:link:hover, :visited:hover { background-color: #eee; color: #555 }
-h1 :link, h1 :visited ,h2 :link, h2 :visited, h3 :link, h3 :visited,
-h4 :link, h4 :visited, h5 :link, h5 :visited, h6 :link, h6 :visited {
- color: inherit;
-}
-.rawlink { border-bottom: none }
 
 
 /* Forms */
@@ -82,10 +72,8 @@ label.disabled { color: #d7d7d7 }
 }
 .nav li.first { border-left: none }
 .nav li.last { border-right: none }
-
-
-
-
+.nav :link, .nav :visited { text-decoration: none; color: #b00; border-bottom: 1px dotted #bbb }
+.nav :link:hover, .nav :visited:hover { background-color: #eee; color: #555 }
 
 menu {
   padding-left: 1em; margin-left: 1em; white-space: nowrap
@@ -136,7 +124,7 @@ h4 {
 }
 
 .footer {
-  font-size: 80%; text-align: center
+  text-align: center
 }
 
 .note {
@@ -335,14 +323,14 @@ table.forumview col {
 
 
 /* menu page */
-.mlink:link {font-size:12px;color:#663300}
-.mlink:active {font-size:12px;color:#ff6600}
-.mlink:visited {font-size:12px;color:#996633}
-.mlinkselected {font-size:12px;font-weight:bold;background-color:#336699;color:#ffffff;text-decoration:none}
+.mlink:link { color:#663300 }
+.mlink:active { color:#ff6600 }
+.mlink:visited { color:#996633 }
+.mlinkselected { font-weight:bold;background-color:#336699;color:#ffffff;text-decoration:none }
 
 .mtitle {font-size:12px;font-weight:bold;color:#336699}
 
-.stitle {color:#336699;margin-bottom:0px;font-weight:bold;font-size:90%}
+.stitle {color:#336699;margin-bottom:0px;font-weight:bold;font-size:14px }
 .stitleline {background-color:#d2d8b0}
 .mlistheader {border-color:#f7f7e7;font-size:x-small;font-weight:bold;text-align:left;background-color:#d2d8b0;color:#336699;vertical-align:bottom}
 
