--- a/trunk/pyerp/fnd/templates/user/main/index.html
+++ b/trunk/pyerp/fnd/templates/user/main/index.html
@@ -11,23 +11,13 @@
         <table width="100%" border="0" cellspacing="0" cellpadding="0">
           <tr>
             <td align="left" valign="top">
-              <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                <tr>
-                  <td width="100%"><h1 class="stitle">通知列表</h1></td>
-                </tr>
-                <tr>
-                  <td class="stitleline"></td>
-                </tr>
-              </table>
+              <h1 class="stitle">通知列表</h1>
             </td>
           </tr>
           <tr>
-            <td align="right">
-              <a href="{{ fnd_user_site_prefix }}mailbox/"><img src="{{ fnd_media_prefix }}images/notify_list.gif" alt="查看全部通知" border="0" align="absmiddle" width="91" height="19"></a>
+            <td align="right" class="floatnav">
+              <a href="{{ fnd_user_site_prefix }}mailbox/">查 看 全 部 通 知</a>
             </td>
-          </tr>
-          <tr>
-            <td><img src="{{ fnd_media_prefix }}images/t.gif" width="4"></td>
           </tr>
           <tr>
             <td>
@@ -58,23 +48,13 @@
           </tr>
           <tr>
             <td>
-              <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                <tr>
-                  <td width="100%"><h1 class="stitle">导航菜单</h1></td>
-                </tr>
-                <tr>
-                  <td class="stitleline"></td>
-                </tr>
-              </table>
+              <h1 class="stitle">导航菜单</h1>
             </td>
           </tr>
           <tr>
-            <td align="right">
-              <a href="OA.jsp"><img src="{{ fnd_media_prefix }}images/customappsnav.gif" alt="编辑导航菜单" border="0" align="absmiddle" width="133" height="19"></a>
+            <td align="right" class="floatnav">
+              <a href="{{ fnd_user_site_prefix }}mailbox/">编 辑 导 航 菜 单</a>
             </td>
-          </tr>
-          <tr>
-            <td><img src="{{ fnd_media_prefix }}images/t.gif" width="4"></td>
           </tr>
           <tr>
             <td>
@@ -94,20 +74,14 @@
       </td>
       <td></td>
       <td valign="top" width="34%">
-        <table cellpadding="0" cellspacing="0" border="0" width="100%">
+        <table width="100%" border="0" cellspacing="0" cellpadding="0">
           <tr>
             <td width="100%"><h1 class="stitle">收藏夹</h1></td>
           </tr>
           <tr>
-            <td class="stitleline"></td>
-          </tr>
-        </table>
-        <table width="100%" border="0" cellspacing="0" cellpadding="0">
-          <tr>
-            <td align="right"><a href="OA.jsp" id="CustomLink"><img src="{{ fnd_media_prefix }}images/func_favorite.gif" alt="编辑收藏夹" border="0" align="absmiddle" width="133" height="19"></a></td>
-          </tr>
-          <tr>
-            <td><img src="{{ fnd_media_prefix }}images/t.gif" width="4"></td>
+            <td align="right" class="floatnav">
+              <a href="{{ fnd_user_site_prefix }}mailbox/">编 辑 收 藏 夹</a>
+            </td>
           </tr>
           <tr>
             <td>
@@ -120,12 +94,6 @@
                 </tr>
               </table>
             </td>
-          </tr>
-        </table>
-        <table border="0" cellspacing="0" cellpadding="0">
-          <tr>
-            <td width="5%"></td>
-            <td valign="top"></td>
           </tr>
         </table>
       </td>
