--- a/trunk/pyerp/fnd/media/style/style.css
+++ b/trunk/pyerp/fnd/media/style/style.css
@@ -322,7 +322,7 @@ table.forumview col {
 
 .mtitle {font-size:12px;font-weight:bold;color:#336699}
 
-.stitle {color:#336699;margin-bottom:0px;border-bottom: #d2d8b0 1px solid;font-weight:bold;font-size:14px }
+.stitle {text-align:left;vertical-align:top;color:#336699;margin-bottom:0px;border-bottom: #d2d8b0 1px solid;font-weight:bold;font-size:14px }
 .mlistheader {border-color:#f7f7e7;font-size:x-small;font-weight:bold;text-align:left;background-color:#d2d8b0;color:#336699;vertical-align:bottom}
 
 .x1l {font-size:12px;color:#000000;vertical-align:baseline;background-color:#f7f7e7;border-color:#d2d8b0}
