--- a/trunk/pyerp/fnd/templates/user/main/index.html
+++ b/trunk/pyerp/fnd/templates/user/main/index.html
@@ -10,8 +10,8 @@
       <td valign="top" width="66%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0">
           <tr>
-            <td align="left" valign="top">
-              <h1 class="stitle">通知列表</h1>
+            <td class="stitle">
+              <h1>通知列表</h1>
             </td>
           </tr>
           <tr>
@@ -47,8 +47,8 @@
             <td><img src="{{ fnd_media_prefix }}images/t.gif" width="4"></td>
           </tr>
           <tr>
-            <td>
-              <h1 class="stitle">导航菜单</h1>
+            <td class="stitle">
+              <h1>导航菜单</h1>
             </td>
           </tr>
           <tr>
@@ -76,7 +76,7 @@
       <td valign="top" width="34%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0">
           <tr>
-            <td width="100%"><h1 class="stitle">收藏夹</h1></td>
+            <td class="stitle"><h1>收藏夹</h1></td>
           </tr>
           <tr>
             <td align="right" class="floatnav">
