--- a/trunk/pyerp/fnd/templates/user/main/index.html
+++ b/trunk/pyerp/fnd/templates/user/main/index.html
@@ -11,7 +11,7 @@
         <table width="100%" border="0" cellspacing="0" cellpadding="0">
           <tr>
             <td class="stitle">
-              <h1>通知列表</h1>
+              通知列表
             </td>
           </tr>
           <tr>
@@ -48,7 +48,7 @@
           </tr>
           <tr>
             <td class="stitle">
-              <h1>导航菜单</h1>
+              导航菜单
             </td>
           </tr>
           <tr>
@@ -76,7 +76,7 @@
       <td valign="top" width="34%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0">
           <tr>
-            <td class="stitle"><h1>收藏夹</h1></td>
+            <td class="stitle">收藏夹</td>
           </tr>
           <tr>
             <td align="right" class="floatnav">
