--- a/trunk/pyerp/fnd/templates/pub/login/login.html
+++ b/trunk/pyerp/fnd/templates/pub/login/login.html
@@ -26,7 +26,7 @@
     </tr>
     <tr>
       <td><label for="id_password">密码:</label></td>
-      <td><input type="password" name="password" id="id_password" /></td>
+      <td><input type="password" name="password" id="id_password" class="textwidget"/></td>
     </tr>
     <tr>
       <td colspan="2" ><label>&nbsp;</label><input type="submit" value="Log in" /></td>
