--- a/pyerp/fnd/templates/resp/responsibility/index.html
+++ b/pyerp/fnd/templates/resp/responsibility/index.html
@@ -3,6 +3,21 @@
 
 {% block title %}职责{% endblock %}
 
+{% block js %}
+<link href="{{ fnd_media_prefix }}style/jquery.autocomplete.css" type="text/css" rel="stylesheet"/>
+<script type="text/javascript" src="{{ fnd_media_prefix }}js/jquery.bgiframe.min.js"></script>
+<script type="text/javascript" src="{{ fnd_media_prefix }}js/jquery.dimensions.min.js"></script>
+<script type="text/javascript" src="{{ fnd_media_prefix }}js/jquery.autocomplete.js"></script>
+<script type="text/javascript">
+<!--
+  $(document).ready(function(){
+    var data = "Core Selectors Attributes Traversing Manipulation CSS Events Effects Ajax Utilities"
+        .split(" ");
+    $("#main_menu").autocomplete(data);
+  });
+-->
+</script>{% endblock %}
+
 {% block left %}
 <div class="menuheader">
   <font color="blue">职责</font>
@@ -13,11 +28,23 @@
 </menu>
 {% endblock %}
 
-
 {% block body %}
-<h2><!-- img alt="" src="" --><a name="welcome">职责</a></h2>
+<h2><a name="welcome">职责</a></h2>
 <div class="section-content">
-<img src="{{ fnd_media_prefix }}images/fnd/screenshots/fnd_responsibility_screen_en.jpg" align="left" border="0"/>
-<img src="{{ fnd_media_prefix }}images/fnd/screenshots/fnd_responsibility_screen_jp.jpg" align="left" border="0"/>
+    <fieldset>
+        <legend>基本信息</legend>
+        职责名:<input type="text" name="uid" /><br/>
+        应用程序:<input type="password" name="password" class="textwidget" /><br/>
+        职责键:<input type="password" name="repassword" class="textwidget" /><br/>
+        摘要:<textarea></textarea><br/>
+        数据组:<input type="text" name="last_name" /><br/>
+        要求组:<input type="text" name="first_name" /><br/>
+        菜单:<input type="text" name="menu" id="main_menu"/><br/>
+    </fieldset>
+    <fieldset>
+        <legend>安全</legend>
+        并发请求组:<input type="text" name="uid" /><br/>
+    </fieldset>
+
 </div>
 {% endblock %}
