--- a/trunk/pyerp/fnd/templates/resp/responsibility/index.html
+++ b/trunk/pyerp/fnd/templates/resp/responsibility/index.html
@@ -33,18 +33,49 @@
 <div class="section-content">
     <fieldset>
         <legend>基本信息</legend>
-        职责名:<input type="text" name="uid" /><br/>
-        应用程序:<input type="password" name="password" class="textwidget" /><br/>
-        职责键:<input type="password" name="repassword" class="textwidget" /><br/>
-        摘要:<textarea></textarea><br/>
-        数据组:<input type="text" name="last_name" /><br/>
-        要求组:<input type="text" name="first_name" /><br/>
-        菜单:<input type="text" name="menu" id="main_menu"/><br/>
+  <table>
+    <tr>
+      <td>职责名:</td>
+      <td><input type="text" name="uid" /></td>
+    </tr>
+    <tr>
+      <td>职责名:</td>
+      <td><input type="text" name="uid" /></td>
+    </tr>
+    <tr>
+      <td> 应用程序:</td>
+      <td><input type="text" name="uid" /></td>
+    </tr>
+    <tr>
+      <td>职责键:</td>
+      <td><input type="text" name="uid" /></td>
+    </tr>
+    <tr>
+      <td>摘要:</td>
+      <td><input type="text" name="uid" /></td>
+    </tr>
+    <tr>
+      <td>数据组:</td>
+      <td><input type="text" name="uid" /></td>
+    </tr>
+    <tr>
+      <td>要求组:</td>
+      <td><input type="text" name="uid" /></td>
+    </tr>
+    <tr>
+      <td>菜单:/td>
+      <td><input type="text" name="uid" /></td>
+    </tr>
+  </table>
     </fieldset>
     <fieldset>
         <legend>安全</legend>
-        并发请求组:<input type="text" name="uid" /><br/>
+  <table>
+    <tr>
+      <td>并发请求组:</td>
+      <td><input type="text" name="uid" /></td>
+    </tr>
+  </table>
     </fieldset>
-
 </div>
 {% endblock %}
