--- a/trunk/pyerp/fnd/templates/pub/index/index.html
+++ b/trunk/pyerp/fnd/templates/pub/index/index.html
@@ -44,7 +44,7 @@
     <h3>Pyerp {% trans 'Arabic' %}</h3>
     <div class="content">
 
-<p>　　Pyerp是基于Python语言，Django框架开发的一套ERP应用系统。</p>
+<p>　　Pyerp是基于Python语言，Django框架开发的一套ERP应用系统。........</p>
 
     </div>
   </div>
